# TUIC

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  annotated.html  annotated_dup.js  atlas_8h.html  atlas_8h.js  atlas__type_8h.html  atlas__type_8h.js  batch_8h.html  batch_8h.js  blend__mode_8h.html  blend__mode_8h.js  boolean_8h.html  boolean_8h.js  button__state_8h.html  button__state_8h.js  classes.html  cursor_8h.html  cursor_8h.js  cursor__mode_8h.html  cursor__mode_8h.js  cursor__shape_8h.html  cursor__shape_8h.js  debug_8h.html  debug_8h.js  desktop__callback_8h.html  desktop__callback_8h.js  detail__flag_8h.html  detail__flag_8h.js  detail__mode_8h.html  detail__mode_8h.js  dir_1925bafc908c6dc95203f1da43275239.html  dir_4259638e1f0b0ce14968b72bfc744bda.html  dir_bd75df8569cc2d40aa9006b73a1da237.html  dir_ce0884ada340ab64e126c60eaba86397.html  dir_dc9e1e299a0b26f222fe6c0a872463f0.html  dir_ef61173ca554cfb1202d825acc3dee38.html  (+80 more)
.github/workflows/: AutoTest.yml  Tests.yaml  Tests.yml
docs/: CMakeLists.txt  Doxyfile.in  main.dox
examples/: CMakeLists.txt
examples/Example-00-Implementation/: impl.c
examples/Example-01-Basic-Panel/: main.c
examples/Example-01-Classic-Panel/: main.c
examples/Example-02-Channel-Replace-Blend-Modes/: main.c
examples/Example-02-Custom-Panel/: main.c
examples/Example-03-Panel-Transformed-Rendering/: main.c
examples/Example-03-Text/: main.c
examples/Example-04-Dynamic-Resizing/: main.c
examples/Example-04-Matrix-Rain/: main.c
examples/Example-05-Basic-Text-Rendering/: main.c
examples/Example-05-Free-Batches/: main.c
examples/Example-05-Multiple-Windows/: main.c
examples/Example-06-Multiple-Windows/: main.c
examples/Example-06-Simple-Topdown-Character/: main.c
examples/Example-06-Window-Callbacks/: main.c
examples/Example-07-Mouse-Control/: main.c
examples/Example-07-Mouse-Input/: main.c
examples/Example-08-Matrix-Rain/: main.c
examples/Example-08-Window-Callbacks/: main.c
examples/Example-08-Window-Fullscreen/: main.c
examples/Example-09-Window-Fullscreen/: main.c
examples/Example-09-Window-Icons/: main.c
examples/Example-10-Window-Icons/: main.c
examples/Example-10-Window-Resizing/: main.c
examples/Example-11-Window-Resizing/: main.c
examples/Example-XX-Matrix-Rain/: main.c
examples/Example-XX-Mouse-Control/: main.c
examples/Example-XX-Mouse-Cursors/: main.c
examples/Example-XX-Multiple-Window/: main.c
examples/Example-XX-Text/: main.c
examples/Example-XX-Window-Callbacks/: main.c
examples/Example-XX-Window-Fullscreen/: main.c
examples/Example-XX-Window-Icons/: main.c
examples/Example-XX-Window-Resizing/: main.c
include/TUIC/: allocation.h  atlas.h  atlas_type.h  batch.h  batch_free.h  batch_full.h  batch_sparse.h  blend_mode.h  boolean.h  box.h  box_part.h  button_state.h  circle.h  circle_it.h  console.h  crop_box.h  crop_circle.h  crop_ring.h  cursor.h  cursor_mode.h  cursor_shape.h  debug.h  desktop_callback.h  detail_flag.h  detail_mode.h  easing.h  enums.h  error_code.h  events.h  filter_mode.h  glyph_atlas.h  grid_shape_types.h  h_line.h  h_line_it.h  heap.h  image.h  instance.h  joystick.h  joystick_hat_state.h  joystick_id.h  (+25 more)
include/TUIC/backends/: objects.h  opengl33.h  opengl33_implementation.in
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  defines_0.js  enums_0.js  enumvalues_0.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  files_6.js  files_7.js  files_8.js  files_9.js  files_a.js  files_b.js  files_c.js  files_d.js  functions_0.js  pages_0.js  searchdata.js  typedefs_0.js  (+13 more)
shaders/: README.md
shaders/Opengl33/: CMakeLists.txt  opengl33_batch_fragment.glsl  opengl33_batch_vertex.glsl  opengl33_renderer_fragment.glsl  opengl33_renderer_vertex.glsl
src/: allocation.c  atlas.c  atlas_type.c  batch.c  batch_free.c  batch_full.c  batch_sparse.c  blend_mode.c  box.c  box_part.c  button_state.c  circle.c  circle_it.c  console.c  crop_box.c  crop_circle.c  crop_ring.c  cursor.c  cursor_mode.c  cursor_shape.c  debug.c  detail_flag.c  detail_mode.c  easing.c  enums.c  error_code.c  events.c  filter_mode.c  glfw_error_check.h  glyph_atlas.c  grid_shapes_inline.h  h_line.c  h_line_it.c  heap.c  image.c  image_inline.h  impl.c  instance.c  joystick.c  joystick_hat_state.c  (+28 more)
test/auto/: CMakeLists.txt  README.md  atlas_type_test.cpp  blend_mode_test.cpp  box_part_test.cpp  box_test.cpp  button_state_test.cpp  circle_test.cpp  constants_test.cpp  constants_test.hpp  crop_box_test.cpp  crop_circle_test.cpp  crop_ring_test.cpp  cursor_mode_test.cpp  cursor_shape_test.cpp  debug_test.cpp  debug_test.hpp  detail_flag_test.cpp  detail_mode_test.cpp  error_code_test.cpp  filter_mode_test.cpp  image_test.cpp  image_test.hpp  keyboard_key_test.cpp  keyboard_mod_test.cpp  line_test.cpp  mouse_button_test.cpp  palette_test.cpp  palette_test.hpp  point2_test.cpp  rect_test.cpp  ring_test.cpp  test.cpp
test/manual/: CMakeLists.txt  README.md  atlas_creation.cpp  blend_mode_rendering.cpp  clipboard.cpp  common_test.cpp  common_test.hpp  cursor.cpp  desktop_events.cpp  detail_mode_rendering.cpp  error_codes.cpp  events.cpp  monitors.cpp  multiple_windows.cpp  opengl33_test.cpp  opengl33_test.hpp  palette_creation.cpp  palette_rendering.cpp  panel_drawing.cpp  panel_resizing.cpp  panel_screenshots.cpp  raw_mouse_motion.cpp  test.cpp  test_impl.cpp  texture_creation.cpp  texture_updating.cpp  time.cpp  window_creation.cpp  window_decoration.cpp  window_drawing.cpp  window_resizing.cpp  window_screenshots.cpp  window_state.cpp
